--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".mvvm.screens.demo_list.TutorialActivity" />
+        <activity android:name=".mvvm.screens.demo_list.tutoriallist.TutorialActivity" />
         <activity android:name=".mvvm.screens.demo_list.rxexample.RxActivity"></activity>
     </application>
 
